crates/monochange_lint/src/snapshots/monochange_lint__snapshots__cargo_lints__dependency_field_order_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
[package]
name = "test"
version = "1.0.0"

[dependencies]
serde = { features = ["derive"], workspace = true }

=== FIXED ===

publish = false[package]
name = "test"
version = "1.0.0"

[dependencies]
serde = { features = ["derive"], workspace = true }

=== END ===
