crates/monochange_lint/src/snapshots/monochange_lint__snapshots__cargo_lints__internal_dependency_workspace_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
[package]
name = "test"
version = "1.0.0"

[dependencies]
internal-crate = { path = "../internal-crate", version = "1.0.0" }

=== FIXED ===

publish = false[package]
name = "test"
version = "1.0.0"

[dependencies]
internal-crate = { path = "../internal-crate", version = "1.0.0" }

=== END ===
