crates/monochange_lint/src/snapshots/monochange_lint__snapshots__cargo_lints__unlisted_package_private_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
[package]
name = "unlisted-crate"
version = "1.0.0"

=== FIXED ===

publish = false[package]
name = "unlisted-crate"
version = "1.0.0"

=== END ===
